# langchain-ai-agent

./: .dockerignore  .env.example  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  LICENSE  Makefile  README.md  bandit-report.json  docker-compose.yml  licenses.md  main.py  pip-audit-report.json  pyproject.toml  sbom.json
.github/: dependabot.yml
.github/actions/ghcr-login/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/telegram-notify/: action.yml  send.sh
.github/workflows/: ci.yml  deploy-dev.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  docker.yml  notification.yml  notifications.yml  release.yml  security.yml
app/: main.py
app/agents/: assistant.py
app/api/: home.py  routes.py
app/core/: config.py
app/llm/: provider.py
app/prompts/: system.py
app/tools/: calculator.py  get_weather.py  text_summarizer.py  web_search.py
docker/: deploy.sh  docker-compose.yml  health-check.sh  rollback.sh  smoke-test.sh
tests/integration/: test_health.py
tests/unit/: test_calculator.py  test_search.py  test_summarizer.py  test_weather.py
