[project]
name = "langchain-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Charles Ferdinand"}
]
license = "MIT"

dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "langchain>=1.3.12",
    "langchain-openrouter>=0.2.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "simpleeval>=1.0.7",
    "tavily-python>=0.7.26",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "cyclonedx-bom>=7.3.0",
    "mypy>=2.2.0",
    "pip-audit>=2.10.1",
    "pip-licenses>=5.5.5",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = [
    "simpleeval.*",
    "tavily.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90
skip_covered = true
